--- a/DemoWE/Views/STasks/Details.cshtml
+++ b/DemoWE/Views/STasks/Details.cshtml
@@ -23,6 +23,18 @@
             @Html.DisplayFor(model => model.TaskDescription)
         </dd>
         <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Sfile)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Sfile)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Status)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Status)
+        </dd>
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.StartDate)
         </dt>
         <dd class = "col-sm-10">
