--- a/DemoWE/Views/STasks/Edit.cshtml
+++ b/DemoWE/Views/STasks/Edit.cshtml
@@ -24,6 +24,16 @@
                 <span asp-validation-for="TaskDescription" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="Sfile" class="control-label"></label>
+                <input asp-for="Sfile" class="form-control" />
+                <span asp-validation-for="Sfile" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Status" class="control-label"></label>
+                <input asp-for="Status" class="form-control" />
+                <span asp-validation-for="Status" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="StartDate" class="control-label"></label>
                 <input asp-for="StartDate" class="form-control" />
                 <span asp-validation-for="StartDate" class="text-danger"></span>
