--- a/DemoWE/Views/STasks/Create.cshtml
+++ b/DemoWE/Views/STasks/Create.cshtml
@@ -35,6 +35,7 @@
             </div>
 
             <div class="form-group">
+
                 <label asp-for="AssignedTo" class="control-label"></label>
                 <input asp-for="AssignedTo" class="form-control" />
                 <span asp-validation-for="AssignedTo" class="text-danger"></span>
@@ -66,11 +67,11 @@
                 </div>
                 <span asp-validation-for="Deadline" class="text-danger"></span>
             </div>
-            <div class="form-group">
+          @*   <div class="form-group">
                 <label asp-for="CreatedBy" class="control-label"></label>
                 <input asp-for="CreatedBy" class="form-control" />
                 <span asp-validation-for="CreatedBy" class="text-danger"></span>
-            </div>
+            </div> *@
            
 
             @* <div class="form-group">
