--- a/DemoWE/Views/STasks/Index.cshtml
+++ b/DemoWE/Views/STasks/Index.cshtml
@@ -7,32 +7,20 @@
 <h1>Index</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <!-- Link to trigger modal removed -->
+    <button id="createButton" class="btn btn-primary">Create New</button>
 </p>
+
 <table class="table">
     <thead>
         <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.TaskTitle)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Status)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.StartDate)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Deadline)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.CreatedBy)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.AssignedTo)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Priority)
-            </th>
+            <th>@Html.DisplayNameFor(model => model.TaskTitle)</th>
+            <th>@Html.DisplayNameFor(model => model.Status)</th>
+            <th>@Html.DisplayNameFor(model => model.StartDate)</th>
+            <th>@Html.DisplayNameFor(model => model.Deadline)</th>
+            <th>@Html.DisplayNameFor(model => model.CreatedBy)</th>
+            <th>@Html.DisplayNameFor(model => model.AssignedTo)</th>
+            <th>@Html.DisplayNameFor(model => model.Priority)</th>
             <th></th>
         </tr>
     </thead>
@@ -40,27 +28,13 @@
         @foreach (var item in Model)
         {
             <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.TaskTitle)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Status)
-                </td>
-                <td>
-                    @item.StartDate.ToShortDateString()
-                </td>
-                <td>
-                    @item.Deadline.ToShortDateString()
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.CreatedBy)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.AssignedTo)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Priority)
-                </td>
+                <td>@Html.DisplayFor(modelItem => item.TaskTitle)</td>
+                <td>@Html.DisplayFor(modelItem => item.Status)</td>
+                <td>@item.StartDate.ToShortDateString()</td>
+                <td>@item.Deadline.ToShortDateString()</td>
+                <td>@Html.DisplayFor(modelItem => item.CreatedBy)</td>
+                <td>@Html.DisplayFor(modelItem => item.AssignedTo)</td>
+                <td>@Html.DisplayFor(modelItem => item.Priority)</td>
                 <td>
                     <a asp-action="Edit" asp-route-id="@item.TaskID">Edit</a> |
                     <a asp-action="Details" asp-route-id="@item.TaskID">Details</a> |
@@ -70,3 +44,59 @@
         }
     </tbody>
 </table>
+
+<!-- CreateModal content -->
+<div class="row">
+    <div class="col-md-4">
+        <div id="createModal" class="modal" tabindex="-1" role="dialog">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title">Create Task</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <!-- Partial view for Create Task form -->
+                        @await Html.PartialAsync("_CreatePartial", new STask()) <!-- Pass an empty STask object -->
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Section for scripts -->
+@section Scripts {
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+
+    <script>
+        $(document).ready(function () {
+            // Event handler for showing the modal
+            $('#createButton').on('click', function () {
+                $('#createModal').modal('show');
+            });
+
+            // Event handler for form submission
+            $(document).on('submit', '#createForm', function (e) {
+                e.preventDefault();
+                // Ajax request for form submission
+                $.ajax({
+                    url: '/STasks/Create',
+                    type: 'post',
+                    data: $(this).serialize(),
+                    success: function (data) {
+                        $('#createModal').modal('hide');
+                        location.reload(); // Refresh the page, you can update UI as needed
+                    },
+                    error: function () {
+                        // Handle error
+                    }
+                });
+            });
+        });
+    </script>
+}
