--- a/DemoWE/Views/Shared/_Layout.cshtml
+++ b/DemoWE/Views/Shared/_Layout.cshtml
@@ -44,28 +44,26 @@
         <a href="javascript:void(0)" class="closebtn" onclick="closeSidebar()">&times;</a>
         <!-- Your navigation links go here -->
         <ul class="navbar-nav flex-grow-1">
-
             <li class="nav-item">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">
                     <img src="https://i.ibb.co/1Mr4GfG/Group.png" alt="Logo" style="max-height:  50px;">
                 </a>
             </li>
-
-
             <li class="nav-item">
                 <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link text-dark" asp-area="" asp-controller="Projects" asp-action="Index">Projects</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link text-dark" asp-area="" asp-controller="STasks" asp-action="Index">Tasks</a>
             </li>
-
-      
-          
-           
+            <li class="nav-item">
+                <a class="nav-link text-dark" asp-area="" asp-controller="Requests" asp-action="Index">Requests</a>
+            </li>
         </ul>
     </div>
 
