--- a/DemoWE/Views/Projects/Delete.cshtml
+++ b/DemoWE/Views/Projects/Delete.cshtml
@@ -23,12 +23,12 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.ProjectDescription)
         </dd>
-        <dt class = "col-sm-2">
+       @*  <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Pfile)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Pfile)
-        </dd>
+        </dd> *@
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.StartDate)
         </dt>
