--- a/DemoWE/Views/Projects/Edit.cshtml
+++ b/DemoWE/Views/Projects/Edit.cshtml
@@ -23,11 +23,11 @@
                 <input asp-for="ProjectDescription" class="form-control" />
                 <span asp-validation-for="ProjectDescription" class="text-danger"></span>
             </div>
-            <div class="form-group">
+           @*  <div class="form-group">
                 <label asp-for="Pfile" class="control-label"></label>
                 <input asp-for="Pfile" class="form-control" />
                 <span asp-validation-for="Pfile" class="text-danger"></span>
-            </div>
+            </div> *@
             <div class="form-group">
                 <label asp-for="StartDate" class="control-label"></label>
                 <input asp-for="StartDate" class="form-control" />
