--- a/DemoWE/Views/Requests/Delete.cshtml
+++ b/DemoWE/Views/Requests/Delete.cshtml
@@ -23,12 +23,12 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.RequestDescription)
         </dd>
-        <dt class = "col-sm-2">
+       @*  <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Rfile)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Rfile)
-        </dd>
+        </dd> *@
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Status)
         </dt>
