--- a/DemoWE/Views/Requests/Edit.cshtml
+++ b/DemoWE/Views/Requests/Edit.cshtml
@@ -23,11 +23,11 @@
                 <input asp-for="RequestDescription" class="form-control" />
                 <span asp-validation-for="RequestDescription" class="text-danger"></span>
             </div>
-            <div class="form-group">
+           @*  <div class="form-group">
                 <label asp-for="Rfile" class="control-label"></label>
                 <input asp-for="Rfile" class="form-control" />
                 <span asp-validation-for="Rfile" class="text-danger"></span>
-            </div>
+            </div> *@
             <div class="form-group">
                 <label asp-for="Status" class="control-label"></label>
                 <select asp-for="Status" asp-items="Html.GetEnumSelectList<Status>()" class="form-control"></select>
