--- a/DemoWE/Views/STasks/Edit.cshtml
+++ b/DemoWE/Views/STasks/Edit.cshtml
@@ -23,11 +23,11 @@
                 <input asp-for="TaskDescription" class="form-control" />
                 <span asp-validation-for="TaskDescription" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            @* <div class="form-group">
                 <label asp-for="Sfile" class="control-label"></label>
                 <input asp-for="Sfile" class="form-control" />
                 <span asp-validation-for="Sfile" class="text-danger"></span>
-            </div>
+            </div> *@
             <div class="form-group">
                 <label asp-for="Status" class="control-label"></label>
                 <input asp-for="Status" class="form-control" />
