--- a/DemoWE/Views/Projects/Create.cshtml
+++ b/DemoWE/Views/Projects/Create.cshtml
@@ -22,11 +22,11 @@
                 <input asp-for="ProjectDescription" class="form-control" />
                 <span asp-validation-for="ProjectDescription" class="text-danger"></span>
             </div>
-         @*    <div class="form-group">
-                <label asp-for="Pfile" class="control-label"></label>
-                <input asp-for="Pfile" class="form-control" />
-                <span asp-validation-for="Pfile" class="text-danger"></span>
-            </div> *@
+            <div class="form-group">
+                <label asp-for="pfile" class="control-label"></label>
+                <input asp-for="pfile" class="form-control" />
+                <span asp-validation-for="pfile" class="text-danger"></span>
+            </div>
             <div class="form-group">
                 <label asp-for="StartDate" class="control-label"></label>
                 <div class="input-group">
@@ -52,7 +52,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="AssignedDepartmentID" class="control-label"></label>
-                <input asp-for="AssignedDepartmentID" class="form-control" />
+                <select asp-for="AssignedDepartmentID" asp-items="Html.GetEnumSelectList<DepartmentNames>()" class="form-control"></select>
                 <span asp-validation-for="AssignedDepartmentID" class="text-danger"></span>
             </div>
             <div class="form-group">
