--- a/DemoWE/Views/Requests/Create.cshtml
+++ b/DemoWE/Views/Requests/Create.cshtml
@@ -50,11 +50,11 @@
                 <input asp-for="Deadline" class="form-control" type="date" />
                 <span asp-validation-for="Deadline" class="text-danger"></span>
             </div>
-            <div class="form-group">
+           @*  <div class="form-group">
                 <label asp-for="CreatedBy" class="control-label"></label>
                 <input asp-for="CreatedBy" class="form-control" />
                 <span asp-validation-for="CreatedBy" class="text-danger"></span>
-            </div>
+            </div> *@
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
