--- a/DemoWE/Views/STasks/_CreatePartial.cshtml
+++ b/DemoWE/Views/STasks/_CreatePartial.cshtml
@@ -30,11 +30,11 @@
         <span asp-validation-for="AssignedTo" class="text-danger"></span>
     </div>
 
-   @*  <div class="form-group">
-        <label asp-for="Sfile" class="control-label"></label>
-        <input asp-for="Sfile" class="form-control" />
-        <span asp-validation-for="Sfile" class="text-danger"></span>
-    </div> *@
+    <div class="form-group">
+        <label asp-for="sfile" class="control-label"></label>
+        <input asp-for="sfile" class="form-control" />
+        <span asp-validation-for="sfile" class="text-danger"></span>
+    </div>
 
     <div class="form-group">
         <label asp-for="StartDate" class="control-label"></label>
