--- a/DemoWE/Views/Requests/Index.cshtml
+++ b/DemoWE/Views/Requests/Index.cshtml
@@ -5,10 +5,11 @@
 }
 
 <h1>Index</h1>
-
 <p>
-    <a asp-action="Create">Create New</a>
+    <!-- Link to trigger modal removed -->
+    <button id="createButton" class="btn btn-primary">Create New</button>
 </p>
+
 <table class="table">
     <thead>
         <tr>
@@ -30,9 +31,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.Deadline)
             </th>
-            <th>
+          @*   <th>
                 @Html.DisplayNameFor(model => model.CreatedBy)
-            </th>
+            </th> *@
             <th></th>
         </tr>
     </thead>
@@ -57,9 +58,9 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Deadline)
             </td>
-            <td>
+            @* <td>
                 @Html.DisplayFor(modelItem => item.CreatedBy)
-            </td>
+            </td> *@
             <td>
                 <a asp-action="Edit" asp-route-id="@item.RequestID">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.RequestID">Details</a> |
@@ -69,3 +70,59 @@
 }
     </tbody>
 </table>
+
+               
+<div class="row">
+    <div class="col-md-4">
+        <div id="createModal" class="modal" tabindex="-1" role="dialog">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title">Create Task</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <!-- Partial view for Create Task form -->
+                        @await Html.PartialAsync("_CreatePartial", new Request()) 
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Section for scripts -->
+@section Scripts {
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+
+    <script>
+        $(document).ready(function () {
+            // Event handler for showing the modal
+            $('#createButton').on('click', function () {
+                $('#createModal').modal('show');
+            });
+
+            // Event handler for form submission
+            $(document).on('submit', '#createForm', function (e) {
+                e.preventDefault();
+                // Ajax request for form submission
+                $.ajax({
+                    url: '/Requests/Create',
+                    type: 'post',
+                    data: $(this).serialize(),
+                    success: function (data) {
+                        $('#createModal').modal('hide');
+                        location.reload(); // Refresh the page, you can update UI as needed
+                    },
+                    error: function () {
+                        // Handle error
+                    }
+                });
+            });
+        });
+    </script>
+}
