- Redesign Create Account Page
Stask
-CreatedBy can now be fetched from userid session.
-fixed date in _CreatePartial.
-username is displayed on the index page from username session
--------------------------------
***NOT WORKING***
sfile upload in create

--- a/DemoWE/Views/STasks/Index.cshtml
+++ b/DemoWE/Views/STasks/Index.cshtml
@@ -5,7 +5,7 @@
 }
 
 <h1>Index</h1>
-
+<h3>hello, @ViewBag.name</h3>
 <p>
     <!-- Link to trigger modal removed -->
     <button id="createButton" class="btn btn-primary">Create New</button>
