--- a/DemoWE/Views/STasks/_CreatePartial.cshtml
+++ b/DemoWE/Views/STasks/_CreatePartial.cshtml
@@ -32,14 +32,14 @@
 
     <div class="form-group">
         <label asp-for="sfile" class="control-label"></label>
-        <input asp-for="sfile" class="form-control" />
+        <input type="file" id="sfile" class="form-control" name="sfile" />
         <span asp-validation-for="sfile" class="text-danger"></span>
     </div>
 
     <div class="form-group">
         <label asp-for="StartDate" class="control-label"></label>
         <div class="input-group">
-            <input asp-for="StartDate" class="form-control" type="date" />
+            <input asp-for="StartDate" class="form-control" type="date" value="" />
             <div class="input-group-append">
                 <label class="input-group-text">
                     <input type="checkbox" id="startImmediately" onclick="handleStartDate()">
@@ -53,16 +53,16 @@
     <div class="form-group">
         <label asp-for="Deadline" class="control-label"></label>
         <div class="input-group">
-            <input asp-for="Deadline" class="form-control" type="date" />
+            <input asp-for="Deadline" class="form-control" type="date" value="" />
         </div>
         <span asp-validation-for="Deadline" class="text-danger"></span>
     </div>
 
-    <div class="form-group">
+   @*  <div class="form-group">
         <label asp-for="CreatedBy" class="control-label"></label>
         <input asp-for="CreatedBy" class="form-control" />
         <span asp-validation-for="CreatedBy" class="text-danger"></span>
-    </div>
+    </div> *@
 
     <br />
     <div class="form-group">
@@ -74,6 +74,7 @@
     function handleStartDate() {
         var checkbox = document.getElementById("startImmediately");
         var dateInput = document.getElementById("StartDate");
+
 
         if (checkbox.checked) {
             // Get the current system date in ISO 8601 format (year-month-day)
