--- a/DemoWE/Views/Users/Create.cshtml
+++ b/DemoWE/Views/Users/Create.cshtml
@@ -1,70 +1,134 @@
 ﻿@model DemoWE.Models.User
 
 @{
+    Layout = null;
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <title>Create</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!--===============================================================================================-->
+    <link rel="icon" type="image/png" href="~/images/icons/favicon.ico" />
+    <!--===============================================================================================-->
+    <link rel="stylesheet" type="text/css" href="~/vendor/bootstrap/css/bootstrap.min.css">
+    <!--===============================================================================================-->
+    <link rel="stylesheet" type="text/css" href="~/fonts/font-awesome-4.7.0/css/font-awesome.min.css">
+    <!--===============================================================================================-->
+    <link rel="stylesheet" type="text/css" href="~/fonts/iconic/css/material-design-iconic-font.min.css">
+    <!--===============================================================================================-->
+    <link rel="stylesheet" type="text/css" href="~/vendor/animate/animate.css">
+    <!--===============================================================================================-->
+    <link rel="stylesheet" type="text/css" href="~/vendor/css-hamburgers/hamburgers.min.css">
+    <!--===============================================================================================-->
+    <link rel="stylesheet" type="text/css" href="~/vendor/animsition/css/animsition.min.css">
+    <!--===============================================================================================-->
+    <link rel="stylesheet" type="text/css" href="~/vendor/select2/select2.min.css">
+    <!--===============================================================================================-->
+    <link rel="stylesheet" type="text/css" href="~/vendor/daterangepicker/daterangepicker.css">
+    <!--===============================================================================================-->
+    <link rel="stylesheet" type="text/css" href="~/css/util.css">
+    <link rel="stylesheet" type="text/css" href="~/css/main.css">
+    <!--===============================================================================================-->
+</head>
 
-<h4>User</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Username" class="control-label"></label>
-                <input asp-for="Username" class="form-control" />
-                <span asp-validation-for="Username" class="text-danger"></span>
+<body>
+
+    <div class="limiter">
+        <div class="container-login100" style="background-image: url('~/images/bg-01.jpg') ;">
+            <div class="wrap-login100">
+                <form asp-action="Create" class="login100-form validate-form">
+
+                    <span class="login100-form-logo">
+
+                        <i>
+
+                            <img src="~/images/work evo logo sv 2.svg" width="100" height="100" />
+                        </i>
+                    </span>
+
+                    <span class="login100-form-title p-b-34 p-t-27">
+                        Create
+                    </span>
+
+                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
+                    <div class="wrap-input100 validate-input" data-validate="Enter username">
+                        
+                        <input asp-for="Username" class="input100" placeholder="Username" />
+                        <span asp-validation-for="Username" class="focus-input100" data-placeholder="&#xf207;"></span>
+                    </div>
+
+                    <div class="wrap-input100 validate-input" data-validate="Enter password">
+                       
+                        <input asp-for="Password" class="input100" placeholder="Password" />
+                        <span asp-validation-for="Password" class="focus-input100" data-placeholder="&#xf191;"></span>
+                    </div>
+
+                    <div class="wrap-input100 validate-input" data-validate="Enter first name">
+                       
+                        <input asp-for="FirstName" class="input100" placeholder="First Name" />
+                        <span asp-validation-for="FirstName" class="focus-input100" data-placeholder="&#xf205;"></span>
+                    </div>
+
+                    <div class="wrap-input100 validate-input" data-validate="Enter last name">
+                        
+                        <input asp-for="LastName" class="input100" placeholder="Last Name" />
+                        <span asp-validation-for="LastName" class="focus-input100" data-placeholder="&#xf205;"></span>
+                    </div>
+
+                    <div class="wrap-input100 validate-input" data-validate="Enter email" >
+                       
+                        <input asp-for="Email" class="input100" placeholder="Email" />
+                        <span asp-validation-for="Email" class="focus-input100" data-placeholder="&#xf15a;"></span>
+                    </div>
+
+                    <div class="wrap-input100 validate-input" data-validate="Enter phone number">
+                      
+                        <input asp-for="PhoneNumber" class="input100" placeholder="Phone Number" />
+                        <span asp-validation-for="PhoneNumber" class="focus-input100" data-placeholder="&#xf2be;"></span>
+                    </div>
+
+                    <div class="wrap-input100 validate-input" data-validate="Select department">
+                       
+                        <select asp-for="DepartmentID" asp-items="Html.GetEnumSelectList<DepartmentNames>()" class="input100">
+                            <option value="" >-- Select Your Department --</option>
+                        </select>
+                        <span asp-validation-for="DepartmentID" class="focus-input100" data-placeholder="&#xf175;"></span>
+                    </div>
+
+                    <div class="container-login100-form-btn">
+                        <input type="submit" value="Create" class="login100-form-btn" />
+                    </div>
+
+                </form>
+                <a asp-action="login" class="txt1">Back to Login</a>
             </div>
-            <div class="form-group">
-                <label asp-for="Password" class="control-label"></label>
-                <input asp-for="Password" class="form-control" />
-                <span asp-validation-for="Password" class="text-danger"></span>
-            </div>
-           @*  <div class="form-group">
-                <label asp-for="Role" class="control-label"></label>
-                <input asp-for="Role" class="form-control" />
-                <span asp-validation-for="Role" class="text-danger"></span>
-            </div> *@
-            <div class="form-group">
-                <label asp-for="FirstName" class="control-label"></label>
-                <input asp-for="FirstName" class="form-control" />
-                <span asp-validation-for="FirstName" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="LastName" class="control-label"></label>
-                <input asp-for="LastName" class="form-control" />
-                <span asp-validation-for="LastName" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Email" class="control-label"></label>
-                <input asp-for="Email" class="form-control" />
-                <span asp-validation-for="Email" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="PhoneNumber" class="control-label"></label>
-                <input asp-for="PhoneNumber" class="form-control" />
-                <span asp-validation-for="PhoneNumber" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="DepartmentID" class="control-label"></label>
-                <select asp-for="DepartmentID" asp-items="Html.GetEnumSelectList<DepartmentNames>()" class="form-control">
-                    <option value="">-- Select Your Department --</option>
-                </select>
-                <span asp-validation-for="DepartmentID" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-        </form>
+        </div>
     </div>
-</div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
 
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
+    <div id="dropDownSelect1"></div>
+
+    <!--===============================================================================================-->
+    <script src="~/vendor/jquery/jquery-3.2.1.min.js"></script>
+    <!--===============================================================================================-->
+    <script src="~/vendor/animsition/js/animsition.min.js"></script>
+    <!--===============================================================================================-->
+    <script src="~/vendor/bootstrap/js/popper.js"></script>
+    <script src="~/vendor/bootstrap/js/bootstrap.min.js"></script>
+    <!--===============================================================================================-->
+    <script src="~/vendor/select2/select2.min.js"></script>
+    <!--===============================================================================================-->
+    <script src="~/vendor/daterangepicker/moment.min.js"></script>
+    <script src="~/vendor/daterangepicker/daterangepicker.js"></script>
+    <!--===============================================================================================-->
+    <script src="~/vendor/countdowntime/countdowntime.js"></script>
+    <!--===============================================================================================-->
+    <script src="~/js/main.js"></script>
+
+</body>
+</html>
