--- a/DemoWE/Views/Users/login.cshtml
+++ b/DemoWE/Views/Users/login.cshtml
@@ -1,5 +1,6 @@
 ﻿@{
-    ViewData["Title"] = "login";
+	Layout = null;
+	ViewData["Title"] = "login";
 }
 <!DOCTYPE html>
 <html lang="en">
@@ -30,23 +31,6 @@
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<!--===============================================================================================-->
 </head>
-@* <h1>login</h1>
-
-
-    <div  class="form-group">
-        <label class="control-label"> Username </label>
-        <input required name="na" class="form-control" />
-    </div>
-    <div class="form-group">
-        <label for="pa" class="control-label"> Password</label>
-        <input required name="pa" type="password" class="form-control" /> <br />
-    </div>
-    <input type="submit" value="Login" class="btn btn-primary" />
-
-    <p style="color:red"> @ViewData["message"]</p>
-</form>
-<a asp-action="Create">Create Account</a> 
- *@
 
 
 
@@ -78,7 +62,7 @@
 						<input class="input100" type="password" name="pa" placeholder="Password">
 						<span class="focus-input100" data-placeholder="&#xf191;"></span>
 					</div>
-
+					<p style="color:red"> @ViewData["message"]</p>
 					<div class="contact100-form-checkbox">
 						<input class="input-checkbox100" id="ckb1" type="checkbox" name="remember-me">
 						<label class="label-checkbox100" for="ckb1">
@@ -98,7 +82,8 @@
 						</a>
 					</div>
 				</form>
-				<a asp-action="Create">Create Account</a>
+				<a asp-action="Create" class="txt1" >Create Account</a>
+				
 			</div>
 		</div>
 	</div>
