--- a/DemoWE/Views/STasks/Edit.cshtml
+++ b/DemoWE/Views/STasks/Edit.cshtml
@@ -50,7 +50,13 @@
             </div>
             <div class="form-group">
                 <label asp-for="AssignedTo" class="control-label"></label>
-                <input asp-for="AssignedTo" class="form-control" />
+                <select asp-for="AssignedTo" class="form-control">
+                    <option value="">-- Select Employee --</option>
+                    @foreach (User t in ViewBag.At)
+                    {
+                        <option value="@t.EmployeeNumber">@t.Username</option>
+                    }
+                </select>
                 <span asp-validation-for="AssignedTo" class="text-danger"></span>
             </div>
             <div class="form-group">
