--- a/DemoWE/Views/Requests/_CreatePartial.cshtml
+++ b/DemoWE/Views/Requests/_CreatePartial.cshtml
@@ -24,7 +24,7 @@
     <div class="form-group">
         <label asp-for="StartDate" class="control-label"></label>
         <div class="input-group">
-            <input asp-for="StartDate" class="form-control" type="date" />
+            <input asp-for="StartDate" class="form-control" type="date" value="" />
             <div class="input-group-append">
                 <label class="input-group-text">
                     <input type="checkbox" id="startImmediately" onclick=handleStartDate()>
@@ -37,22 +37,20 @@
 
     <div class="form-group">
         <label asp-for="Deadline" class="control-label"></label>
-        <input asp-for="Deadline" class="form-control" type="date" />
+        <input asp-for="Deadline" class="form-control" type="date" value=""/>
         <span asp-validation-for="Deadline" class="text-danger"></span>
     </div>
 
-    <div class="form-group">
+@*     <div class="form-group">
         <label asp-for="CreatedBy" class="control-label"></label>
         <input asp-for="CreatedBy" class="form-control" />
         <span asp-validation-for="CreatedBy" class="text-danger"></span>
-    </div>
+    </div> *@
 
     <div class="form-group">
         <input type="submit" value="Create" class="btn btn-primary" />
     </div>
 </form>
-    </div>
-</div>
 
 <div>
     <a asp-action="Index">Back to List</a>
