STask - you can only Assign task to people within your department+yourself - limit certain button to only appear if the user is a manager role Project -project task is now working but further work is needed
general
-removed project task folder
-create early design for admin layout

--- a/DemoWE/Views/STasks/_CreatePartial.cshtml
+++ b/DemoWE/Views/STasks/_CreatePartial.cshtml
@@ -1,6 +1,7 @@
 ﻿@model DemoWE.Models.STask
 
 <form id="createForm" asp-action="Create">
+    
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
     <div class="form-group">
@@ -28,7 +29,7 @@
         <div id="assignedToContainer">
             <select asp-for="AssignedTo" class="form-control">
                 <option value="">-- Select Employee --</option>
-                @foreach (User t in ViewBag.At)
+                @foreach (User t in ViewBag.dt)
                 {
                     <option value="@t.EmployeeNumber">@t.Username</option>
                 }
