--- a/DemoWE/Views/STasks/Edit.cshtml
+++ b/DemoWE/Views/STasks/Edit.cshtml
@@ -70,7 +70,7 @@
         </form>
     </div>
 </div>
-
+<a asp-action="Delete" asp-route-id="@Model.TaskID">Delete</a>
 <div>
     <a asp-action="Index">Back to List</a>
 </div>
