--- a/DemoWE/Views/STasks/Index.cshtml
+++ b/DemoWE/Views/STasks/Index.cshtml
@@ -8,7 +8,11 @@
 <h3>hello, @ViewBag.name</h3>
 <p>
     <!-- Link to trigger modal removed -->
-    <button id="createButton" class="btn btn-primary">Create New</button>
+   @*  @if (ViewBag.Role == 2)
+    { *@
+        <button id="createButton" class="btn btn-primary">Create New</button>
+
+    @* }  *@
 </p>
 
 
@@ -51,10 +55,14 @@
             
                 <td>@Html.DisplayFor(modelItem => item.Priority)</td>
                 <td>
-                    <a asp-action="Edit" asp-route-id="@item.TaskID">Edit</a> |
-                    <a asp-action="Details" asp-route-id="@item.TaskID">Details</a> |
-                    <a asp-action="Delete" asp-route-id="@item.TaskID">Delete</a>
-                </td>
+                    <td>
+                        @if (ViewBag.Role != 1 || item.CreatedBy == ViewBag.userid)
+                        {
+                            <a asp-action="Edit" asp-route-id="@item.TaskID">Edit</a>
+                           
+                        }
+                        <a asp-action="Details" asp-route-id="@item.TaskID">Details</a>
+               
             </tr>
         }
     </tbody>
@@ -84,9 +92,7 @@
 
 <!-- Section for scripts -->
 @section Scripts {
-    @{
-        await Html.RenderPartialAsync("_ValidationScriptsPartial");
-    }
+    @{ await Html.RenderPartialAsync("_ValidationScriptsPartial"); }
 
     <script>
         $(document).ready(function () {
