--- a/DemoWE/Views/STasks/Edit.cshtml
+++ b/DemoWE/Views/STasks/Edit.cshtml
@@ -30,8 +30,10 @@
             </div> *@
             <div class="form-group">
                 <label asp-for="Status" class="control-label"></label>
-                <input asp-for="Status" class="form-control" />
-                <span asp-validation-for="Status" class="text-danger"></span>
+                
+                <select asp-for="Status" asp-items="Html.GetEnumSelectList<Status>()" class="form-control">
+                   
+                </select>
             </div>
             <div class="form-group">
                 <label asp-for="StartDate" class="control-label"></label>
