--- a/DemoWE/Views/Projects/Details.cshtml
+++ b/DemoWE/Views/Projects/Details.cshtml
@@ -9,57 +9,96 @@
     <h2 class="card-title mb-0"> Project : @Html.DisplayFor(model => model.ProjectTitle)</h2>
     <h4> Project descrptition: @Html.DisplayFor(model => model.ProjectDescription)</h4>
 </div>
- </br>
+
 <p>
-    <!-- Link to trigger modal removed -->
-    <button id="createButton" class="btn btn-primary">Create Project Task</button>
+    @if (ViewBag.Role == 2)
+    {
+        <button id="createButton" class="btn btn-primary">Create Project Task</button>
+    }
 </p>
-@* <div class="container-fluid">
 
 
+<div class="container-fluid">
 
-    <div class="row">
-        <div class="col-md-6 offset-md-7">
-            <div class="card mb-4">
-                
-                <div class="card-body">
-                    <p>@Html.DisplayFor(model => model.ProjectDescription)</p>
-                    <dl class="row">
-                        <div class="col-sm-6">
-                            <dt>Status</dt>
-                            <dd>@Html.DisplayFor(model => model.Status)</dd>
-                            <dt>StartDate</dt>
-                            <dd>@Html.DisplayFor(model => model.StartDate)</dd>
-                            <dt>Deadline</dt>
-                            <dd>@Html.DisplayFor(model => model.Deadline)</dd>
-                        </div>
-                        <div class="col-sm-6">
-                          
-                            <dt>AssignedDepartmentID</dt>
-                            <dd>@Html.DisplayFor(model => model.AssignedDepartmentID)</dd>
-                            <dt>Priority</dt>
-                            <dd>@Html.DisplayFor(model => model.Priority)</dd>
 
-                        </div>
-                    
-
-                        <div class="col-sm-6" id="checkboxSection">
-                            <dt>Checkboxes</dt>
-                            <dd id="checkboxList">
-                                <!-- Existing checkboxes will be added here -->
-                            </dd>
-                            <button onclick="addCheckbox()">Add Checkbox</button>
-                        </div>
-</dl>
+<div class="row">
+    <div class="col-md-6 offset-md-7">
+        <div class="card mb-4">
+            <div class="row">
+                <div class="col-sm-6">
+                    <dl>
+                        <dt>Status</dt>
+                        <dd>@Html.DisplayFor(model => model.Status)</dd>
+                        <dt>StartDate</dt>
+                        <dd>@Model.StartDate.ToShortDateString()</dd>
+                        <dt>Deadline</dt>
+                        <dd>@Model.Deadline.ToShortDateString()</dd>
+                    </dl>
+                </div>
+                <div class="col-sm-6">
+                    <dl>
+                        <dt>Priority</dt>
+                        <dd>@Html.DisplayFor(model => model.Priority)</dd>
+                    </dl>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 </div>
-</div>
-</div>
-</div> *@
 
 
+<table class="table">
+    <thead>
+        <tr>
+            <th>TaskTitle</th>
+            <th>Status</th>
+            <th>StartDate</th>
+            <th>Deadline</th>
+            <th>CreatedBy</th>
+            <th>AssignedTo</th>
+            <th>Priority</th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (STask item in ViewBag.st)
+        {
+            <tr>
+                <td>@Html.DisplayFor(modelItem => item.TaskTitle)</td>
+                <td>@Html.DisplayFor(modelItem => item.Status)</td>
+                <td>@item.StartDate.ToShortDateString()</td>
+                <td>@item.Deadline.ToShortDateString()</td>
+                @foreach (User t in ViewBag.At)
+                {
+                    if (t.EmployeeNumber == item.CreatedBy)
+                    {
+                        <td>@t.FirstName</td>
+                    }
+                }
+                @foreach (User t in ViewBag.At)
+                {
+                    if (t.EmployeeNumber == item.AssignedTo)
+                    {
+                        <td>@t.FirstName</td>
+                    }
+                }
 
-   
+                <td>@Html.DisplayFor(modelItem => item.Priority)</td>
+                <td>
+                <td>
+                       
+                        @if (ViewBag.Role != 1 || item.CreatedBy == ViewBag.userid)
+                        {
+                            <a asp-controller="STask" asp-action="Edit" asp-route-id="@item.TaskID">Edit</a>
+                        }
+                        <a asp-controller="STask" asp-action="Details" asp-route-id="@item.TaskID">Details</a>
+                   
+
+            </tr>
+        }
+    </tbody>
+</table>
 
 
 <!-- CreateModal content -->
@@ -86,11 +125,6 @@
 
 
 
-<div class="card mt-4">
-    <div class="card-header">
-        Checkboxes
-    </div>
-</div>
 
 <div class="card-footer">
     <a asp-action="Edit" asp-route-id="@Model?.ProjectID" class="btn btn-primary float-right">Edit</a>
@@ -100,34 +134,6 @@
 
 
 
-<script>
-    // Counter to keep track of checkbox IDs
-    let checkboxCounter = 1;
-
-    // Function to add a new checkbox
-    function addCheckbox() {
-        const checkboxName = prompt("Enter checkbox name:");
-        if (checkboxName) {
-            const checkboxId = `checkbox_${checkboxCounter++}`;
-            const checkboxHtml = `
-                        <div>
-                            <input type="checkbox" id="${checkboxId}" name="checkboxes" value="${checkboxName}">
-                            <label for="${checkboxId}">${checkboxName}</label>
-                            <button onclick="deleteCheckbox('${checkboxId}')">Delete</button>
-                        </div>
-                    `;
-            document.getElementById("checkboxList").innerHTML += checkboxHtml;
-        }
-    }
-
-    // Function to delete a checkbox
-    function deleteCheckbox(checkboxId) {
-        const checkboxElement = document.getElementById(checkboxId);
-        if (checkboxElement) {
-            checkboxElement.parentElement.remove();
-        }
-    }
-</script>
 
     @section Scripts {
         @{
