--- a/DemoWE/Views/Projects/Edit.cshtml
+++ b/DemoWE/Views/Projects/Edit.cshtml
@@ -43,7 +43,7 @@
                 <select asp-for="Priority" asp-items="Html.GetEnumSelectList<PriorityLevel>()" class="form-control"></select>
                 <span asp-validation-for="Priority" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group" hidden>
                 <label asp-for="AssignedDepartmentID" class="control-label"></label>
                 <input asp-for="AssignedDepartmentID" class="form-control" />
                 <span asp-validation-for="AssignedDepartmentID" class="text-danger"></span>
