--- a/DemoWE/Views/Projects/Index.cshtml
+++ b/DemoWE/Views/Projects/Index.cshtml
@@ -8,7 +8,10 @@
 
 <p>
     <!-- Link to trigger modal removed -->
-    <button id="createButton" class="btn btn-primary">Create New</button>
+     @if (ViewBag.Role == 2)
+    {
+        <button id="createButton" class="btn btn-primary">Create New</button>
+    }
 </p>
 
 <table class="table">
