--- a/DemoWE/Views/Projects/_CreatePartial.cshtml
+++ b/DemoWE/Views/Projects/_CreatePartial.cshtml
@@ -4,6 +4,7 @@
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
     <div class="form-group">
+        <p>@ViewBag.asa</p>
         <label asp-for="ProjectTitle" class="control-label"></label>
         <input asp-for="ProjectTitle" class="form-control" />
         <span asp-validation-for="ProjectTitle" class="text-danger"></span>
@@ -47,13 +48,13 @@
         <span asp-validation-for="Priority" class="text-danger"></span>
     </div>
 
-    <div class="form-group">
+    <div class="form-group" hidden>
         <label asp-for="AssignedDepartmentID" class="control-label"></label>
-        <select asp-for="AssignedDepartmentID" asp-items="Html.GetEnumSelectList<DepartmentNames>()" class="form-control"></select>
+        <select asp-for="AssignedDepartmentID" class="form-control"></select>
         <span asp-validation-for="AssignedDepartmentID" class="text-danger"></span>
-    </div>
+    </div> 
 
-    <div class="form-group">
+    <div class="form-group" hidden>
         <label asp-for="Status" class="control-label"></label>
         <select asp-for="Status" asp-items="Html.GetEnumSelectList<Status>()" class="form-control"></select>
         <span asp-validation-for="Status" class="text-danger"></span>
