--- a/DemoWE/Views/Shared/_Layout.cshtml
+++ b/DemoWE/Views/Shared/_Layout.cshtml
@@ -52,6 +52,7 @@
             <li class="nav-item">
                 <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Employee">Home</a>
             </li>
+
             <li class="nav-item">
                 <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
             </li>
@@ -103,6 +104,9 @@
     </script>
 
     <style>
+        body{
+            background-color: #DDDDDD;
+        }
         /* The sidebar */
         .sidebar {
             height: 100%; /* Full-height */
@@ -111,7 +115,7 @@
             z-index: 1; /* Stay on top */
             top: 0;
             left: 0;
-            background-color: snow; /* Black */
+            background-color: #DDDDDD; /* Black */
             overflow-x: hidden; /* Disable horizontal scroll */
             transition: 0.5s; /*  0.5 second transition effect to slide in the sidebar */
             padding-top: 60px; /* Place content  60px from the top */
